--- a/web/downloader/youtube/templates/youtube/link_enter.html
+++ b/web/downloader/youtube/templates/youtube/link_enter.html
@@ -8,6 +8,7 @@
             <form method="post">
             {% csrf_token %}
              <input type="text" size="40" name="url" id="url" placeholder="Enter URL">
+             <input type="text" size="40" name="email" id="email" placeholder="Enter email">
              <input type="submit" value="Start">
             </form>
     </div>
