--- a/web/downloader/youtube/templates/youtube/success.html
+++ b/web/downloader/youtube/templates/youtube/success.html
@@ -2,4 +2,5 @@
 
 {% block content %}
     <h1> Link to mp3 was sended to email </h1>
+    <a href=" {% url 'enter-link' %} ">Download</a>
 {% endblock content %}
